--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logo.png
-  #   - images/a_dot_ham.jpeg
+    - assets/images/logo.png
+    - assets/images/banner.jpg
+    - assets/images/avatar.png
+    - assets/images/header1.png
+    - assets/images/header2.jpg
+    - assets/images/header3.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -77,14 +81,16 @@ flutter:
   fonts:
     - family: Shrikhand
       fonts:
-        - asset: font/Shrikhand-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+        - asset: assets/fonts/Shrikhand-Regular.ttf
+    - family: BricolageGrotesque
+      fonts:
+        - asset: assets/fonts/BricolageGrotesque_24pt-Bold.ttf
+    - family: RedHatDisplay
+      fonts:
+        - asset: assets/fonts/RedHatDisplay-Medium.ttf
+    - family: Gayathri
+      fonts:
+        - asset: assets/fonts/Gayathri-Bold.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
